html-nginx-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: html-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: html-nginx
  template:
    metadata:
      labels:
        app: html-nginx
    spec:
      containers:
      - name: html-nginx
        image: dtlabs/mystaticsite:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
