http11-image-webserver-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: http11-image-webserver-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /     
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: http11-image-webserver.cberry.xzy
    http:
      paths:
      - path: /
        backend:
          serviceName: image-nginx
          servicePort: 80
